--- a/static/css/base.css
+++ b/static/css/base.css
@@ -31,6 +31,14 @@ textarea {
     font: inherit;
 }
 
+form,
+form input,
+form select,
+form textarea,
+form button {
+    font-family: "Roboto", "Inter", sans-serif;
+}
+
 :root {
     --app-bg: #f1f1f1;
     --surface-0: #f1f1f1;
